<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/elimu_logo_loginPage"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_elimu_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/kenyan_flag_green"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elimu_logo_loginPage" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="194dp"
                android:text="@string/welcome"
                android:textColor="@color/kenyan_flag_white"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.5"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/kenyan_flag_white"
                app:layout_constraintStart_toStartOf="@+id/login_welcomeText"
                app:layout_constraintTop_toBottomOf="@+id/login_welcomeText" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/user_icon"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_user_icon" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:autofillHints=""
                android:backgroundTint="@color/kenyan_flag_white"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/kenyan_flag_white"
                android:textColorHint="@color/kenyan_flag_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_password_icon" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/kenyan_flag_white"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/kenyan_flag_white"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/loginbutton"
                android:backgroundTint="@color/kenyan_flag_red"
                android:letterSpacing="0.3"
                android:text="@string/Login"
                android:textColor="@color/kenyan_flag_white"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/login_throughFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/instead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_card" />

    <ImageView
        android:id="@+id/icon_Google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/Google"
        app:layout_constraintStart_toStartOf="@+id/login_throughFacebook"
        app:layout_constraintTop_toBottomOf="@+id/login_throughFacebook"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/icon_Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/Facebook"
        app:layout_constraintEnd_toEndOf="@+id/login_throughFacebook"
        app:layout_constraintTop_toBottomOf="@+id/login_throughFacebook"
        app:srcCompat="@drawable/ic_facebook"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_Google" />
</androidx.constraintlayout.widget.ConstraintLayout>